--- a/fastly.toml
+++ b/fastly.toml
@@ -2,10 +2,17 @@
 # https://developer.fastly.com/reference/fastly-toml/
 
 authors = ["<oss@fastly.com>"]
-description = "An empty application template for the Fastly Compute@Edge environment which simply returns a 200 OK response."
+description = ""
 language = "javascript"
 manifest_version = 2
-name = "Empty starter for JavaScript"
+name = "Geo-IP API at the edge"
 
 [scripts]
   build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
+
+[local_server.backends.origin_0]
+      url = "https://httpbin.org"
+
+[setup.backends.origin_0]
+address = "httpbin.org"
+port = 443
