--- a/package.json
+++ b/package.json
@@ -1,22 +1,1 @@
-{
-  "name": "compute-starter-kit-javascript-empty",
-  "version": "0.4.0",
-  "main": "src/index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fastly/compute-starter-kit-javascript-empty.git"
-  },
-  "type": "module",
-  "author": "oss@fastly.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fastly/compute-starter-kit-javascript-empty/issues"
-  },
-  "homepage": "https://developer.fastly.com/solutions/starters/compute-starter-kit-javascript-empty",
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "dependencies": {
-    "@fastly/js-compute": "^1.3.2"
-  }
-}
+{"author":"oss@fastly.com","bugs":{"url":"https://github.com/fastly/compute-starter-kit-javascript-empty/issues"},"dependencies":{"@fastly/js-compute":"^0.2.0"},"engines":{"node":">=18.0.0"},"homepage":"https://developer.fastly.com/solutions/starters/compute-starter-kit-javascript-empty","license":"MIT","main":"src/index.js","name":"fiddle-b485866f","repository":{"type":"git","url":"git+https://github.com/fastly/compute-starter-kit-javascript-empty.git"},"type":"module","version":"0.4.0"}
