--- a/fastly.toml
+++ b/fastly.toml
@@ -6,6 +6,7 @@ description = ""
 language = "javascript"
 manifest_version = 2
 name = "Geo-IP API at the edge"
+service_id = "IGzjl0td8awUC4Z2kPopn3"
 
 [scripts]
   build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
