--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "url": "https://github.com/fastly/compute-starter-kit-javascript-empty/issues"
   },
   "dependencies": {
-    "@fastly/js-compute": "^0.2.0"
+    "@fastly/js-compute": "^0.2.0",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -18,5 +19,8 @@
     "url": "git+https://github.com/fastly/compute-starter-kit-javascript-empty.git"
   },
   "type": "module",
-  "version": "0.4.0"
+  "version": "0.4.0",
+  "scripts": {
+    "start": "node server.js"
+  }
 }
